sort.basic.bubble.AlgBubbleSort2.scala.error
Erreur de compilation :
AlgBubbleSort2:4: error: not found: value by
  for (i<- 0 to n) by -1 {
                   ^AlgBubbleSort2:4: error: Int(1) does not take parameters
  for (i<- 0 to n) by -1 {
                         ^